Fix a bug on mobile LibraryPage which caused to show elements outside the viewport

--- a/src/app/pages/library-page/library-page.component.scss
+++ b/src/app/pages/library-page/library-page.component.scss
@@ -121,6 +121,7 @@ dav-icon-card.quick-action-button {
 .all-books-button-container {
 	display: flex;
 	margin-top: 1rem;
+	margin-right: 0.5rem;
 }
 
 .right-content-inner-container {
